@@ -25,8 +25,6 @@
   <name>Narayana: ArjunaJTS</name>
   <description>Narayana: ArjunaJTS</description>
   <properties>
-    <java.corba.patch.name>idlj.java.corba.patch</java.corba.patch.name>
-    <java.corba.patch.jar>${project.build.directory}/dependency/${java.corba.patch.name}-${project.version}.jar</java.corba.patch.jar>
     <modular.jdk.args/>
     <sortpom.skip>true</sortpom.skip>
   </properties>
@@ -48,39 +46,6 @@
     <module>integration-jakarta</module>
   </modules>
   <profiles>
-      <profile>
-        <id>j9</id>
-        <activation>
-          <jdk>[1.9,11)</jdk>
-        </activation>
-        <build>
-          <plugins>
-           <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <executions>
-                <execution>
-                  <id>default-test</id>
-                  <phase>test</phase>
-                  <goals>
-                    <goal>test</goal>
-                  </goals>
-                  <configuration>
-                    <argLine>--patch-module java.corba=${java.corba.patch.jar} --add-modules java.corba ${modular.jdk.args}</argLine>
-                    <systemPropertyVariables
-                      combine.children="append">
-                      <OrbPortabilityEnvironmentBean.orbImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.orb.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.orbImpleClassName>
-                      <OrbPortabilityEnvironmentBean.poaImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.oa.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.poaImpleClassName>
-                      <OrbPortabilityEnvironmentBean.orbDataClassName>com.arjuna.orbportability.internal.orbspecific.versions.javaidl_1_4</OrbPortabilityEnvironmentBean.orbDataClassName>
-                    </systemPropertyVariables>
-                  </configuration>
-                </execution>
-              </executions>
-            </plugin>
-          </plugins>
-        </build>
-      </profile>
-
       <profile>
           <id>jts-jacorb</id>
           <activation>
